[metadata]
name = pytest
version = attr: pytest.__version__
author = Lindsay Forestell
author_email = lindsay.forestell@gmail.com
description = Testing creating and maintenance of python packages on GitHub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lindsay-forestell/pytest
project_urls =
    Bug Tracker = https://github.com/lindsay-forestell/pytest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    examples*
    tests*
    docs*